Made the main flexboxes and started work styling page from the top.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
+    <div class="header">
+        <div class="header">Header Logo</div>
+        <div class="empty"></div>
+        <div class="links">header link one</div>
+        <div class="links">header link two</div>
+        <div class="links">header link three</div>
+    </div>
+    <div class="main-intro">
+        <div class="leftright">
+            <div class="top">This website is awesome</div>
+            <div class="bot">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        </div>
+        <div class="leftright">
+            <div class="bot">this is a placeholder for an image</div>
+        </div>
+    </div>
+    <div class="random-info">
+        <div class="topbottom">Some random information.</div>
+        <div class="topbottom">
+            <div class="subtext">
+                <div></div>
+                <div>this is some subtext unden an illustration or image</div>
+            </div>
+            <div class="subtext">
+                <div></div>
+                <div>this is some subtext unden an illustration or image</div>
+            </div>
+            <div class="subtext">
+                <div></div>
+                <div>this is some subtext unden an illustration or image</div>
+            </div>
+            <div class="subtext">
+                <div></div>
+                <div>this is some subtext unden an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div>
+            <div class="actualquote">quote</div>
+            <div class="name">name</div>
+        </div>
+    </div>
+    <div class="call-to-action">
+        <div>
+            <div>
+            <div>Call to action! It's Time!</div>
+            <div>sign up</div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div>Copyright (C) The Odin Project 2021</div>
     </div>
 </body>
 </html>
