--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
             <div>
             <div>Call to action! It's Time!</div>
-            <div>sign up</div>
+            <div>sign up button</div>
             </div>
         </div>
     </div>
